# axum_clerk_basic

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
static/: index.html  main.js
