[package]
name = "testingifrustworking"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = "0.8.3"
tower = "0.5.2"
tokio = { version = "1.44.2", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clerk-rs = { version = "0.4.1", features = ["axum"] }
shuttle-axum = "0.53.0"
shuttle-runtime = "0.53.0"
tower-http = {version = "0.6.2", features = ["full"]}

